--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hobileriniz ve yetenekleriniz doğrultusunda en uygun mesleği keşfedin. Yapay zeka destekli platformumuz, size özel kariyer önerileri sunar.">
+    <meta name="keywords" content="meslek seçimi, kariyer önerileri, yapay zeka, hobiler, yetenekler, meslek testi, kariyer planlama, büyüyünce ne olsam, büyüyünce ne, büyüyünce">
     <title>Büyüyünce ne olsam?</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
