--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
     <div class="container">
+        <img src="/Assets/logo.png" alt="Description of the image" width="100" height="100">
+
         <h1>Büyüyünce ne olsam?</h1>
+        
+        
         <p>Eşin dostun doktor ol dayatmalarından sıkıldın mı? Doğru yerdesin! Şimdi aşağıdaki alanlarda bize hobilerinden ve iyi olduğun konulardan bahset, sana özel oluşturulmuş yapay zekamız hangi alanda çalışacağını şak diye söylesin!</p>
 
         <form id="interest-form">
