--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div id="recommendations"></div>
         </div>
     </div>
+
+    <a href="https://gemini.google.com/" class="powered-by" style="position: fixed; bottom: 10px; right: 10px; text-decoration: none; color: #555; font-size: 0.9em;">Powered by Gemini</a>
+
     
     <script type="module">
         import { GoogleGenerativeAI, HarmBlockThreshold, HarmCategory } from "https://esm.run/@google/generative-ai";
