Fix README EOF newline

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="#ozellikler">Özellikler</a></li>
             <li><a href="#nasil-calisir">Nasıl Çalışır</a></li>
             <li><a href="#hakkinda">Hakkında</a></li>
+            <li><a href="#yorumlar">Yorumlar</a></li>
           </ul>
           <a href="./kariyer_onerici/form.html" class="nav-button">Başla</a>
         </nav>
@@ -186,6 +187,39 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
+    <section class="testimonials" id="yorumlar">
+      <div class="container">
+        <div class="section-header">
+          <h2>Kullanıcı <span>Yorumları</span></h2>
+          <p>Gerçek deneyimlerden ilham alın</p>
+        </div>
+        <div class="testimonials-grid">
+          <div class="testimonial-card">
+            <p class="testimonial-text">"3 adımda geleceğimi planladım. Harika!"</p>
+            <div class="testimonial-author">
+              <img src="https://i.pravatar.cc/80?img=68" alt="Avatar">
+              <span>Ayşe K.</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">"Kariyer hedeflerime ışık tuttu."</p>
+            <div class="testimonial-author">
+              <img src="https://i.pravatar.cc/80?img=12" alt="Avatar">
+              <span>Mehmet L.</span>
+            </div>
+          </div>
+          <div class="testimonial-card">
+            <p class="testimonial-text">"Tasarım ve kullanım çok etkileyici."</p>
+            <div class="testimonial-author">
+              <img src="https://i.pravatar.cc/80?img=32" alt="Avatar">
+              <span>Derya S.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
@@ -199,12 +233,13 @@
               <li><a href="#ozellikler">Özellikler</a></li>
               <li><a href="#nasil-calisir">Nasıl Çalışır</a></li>
               <li><a href="#hakkinda">Hakkında</a></li>
+              <li><a href="#yorumlar">Yorumlar</a></li>
               <li><a href="https://github.com/kullanici/kariyer-ai" target="_blank" rel="noopener">GitHub</a></li>
             </ul>
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2025 Büyüyünce Ne Olsam? | <a href="https://github.com/kullanici/kariyer-ai/blob/main/LICENSE" target="_blank" rel="noopener"> GPL 3.0 LICENSE</a></p>
+          <p>&copy; <span class="year"></span> Büyüyünce Ne Olsam? | <a href="https://github.com/kullanici/kariyer-ai/blob/main/LICENSE" target="_blank" rel="noopener"> GPL 3.0 LICENSE</a></p>
         </div>
       </div>
     </footer>
