--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="#ozellikler">Özellikler</a></li>
             <li><a href="#nasil-calisir">Nasıl Çalışır</a></li>
             <li><a href="#hakkinda">Hakkında</a></li>
+            <li><a href="#istatistikler">İstatistikler</a></li>
             <li><a href="#yorumlar">Yorumlar</a></li>
           </ul>
           <a href="./kariyer_onerici/form.html" class="nav-button">Başla</a>
@@ -187,6 +188,26 @@
       </div>
     </section>
 
+    <!-- Stats Section -->
+    <section class="stats" id="istatistikler">
+      <div class="container">
+        <div class="stats-grid">
+          <div class="stat-card">
+            <h3><span class="count" data-target="5000">0</span>+</h3>
+            <p>Farklı Meslek Profili</p>
+          </div>
+          <div class="stat-card">
+            <h3><span class="count" data-target="800">0</span>+</h3>
+            <p>Kullanıcı Yorumu</p>
+          </div>
+          <div class="stat-card">
+            <h3><span class="count" data-target="99">0</span>%</h3>
+            <p>Memnuniyet Oranı</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Testimonials Section -->
     <section class="testimonials" id="yorumlar">
       <div class="container">
@@ -233,6 +254,7 @@
               <li><a href="#ozellikler">Özellikler</a></li>
               <li><a href="#nasil-calisir">Nasıl Çalışır</a></li>
               <li><a href="#hakkinda">Hakkında</a></li>
+              <li><a href="#istatistikler">İstatistikler</a></li>
               <li><a href="#yorumlar">Yorumlar</a></li>
               <li><a href="https://github.com/kullanici/kariyer-ai" target="_blank" rel="noopener">GitHub</a></li>
             </ul>
