Switch to pastel theme

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="description" content="Büyüyünce Ne Olsam? - Hobileriniz ve güçlü yönlerinize göre kişiselleştirilmiş kariyer önerileri sunan yapay zeka uygulaması" />
   <title>Büyüyünce Ne Olsam? - Geleceğin Mesleklerini Keşfet</title>
   <link rel="stylesheet" href="landing.css" />
-  <!-- Google Fonts -->
+  <!-- Google Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="page-wrapper">
@@ -53,7 +54,7 @@
         </div>
         <div class="hero-image">
           <div class="image-container">
-            <img src="./Assets/buyuyunceneolsamKID.png" alt="Büyüyünce Ne Olsam? Arayüzü" class="main-image">
+            <img src="https://images.unsplash.com/photo-1526329610859-ac9ff1c5fba6?auto=format&fit=crop&w=600&q=60" alt="Mutlu çocuklar" class="main-image">
             <div class="floating-element one"></div>
             <div class="floating-element two"></div>
             <div class="floating-element three"></div>
@@ -72,42 +73,42 @@
         <div class="features-grid">
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
+              <i class="bx bxs-brain"></i>
             </div>
             <h3>AI Destekli Analiz</h3>
             <p>Google'ın Gemini 2.5 Flash modeliyle hızlı ve isabetli kariyer analizleri</p>
           </div>
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
+              <i class="bx bxs-lock-alt"></i>
             </div>
             <h3>Tam Gizlilik</h3>
             <p>Verileriniz tamamen gizli kalır, hiçbir bilgi depolanmaz veya paylaşılmaz</p>
           </div>
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+              <i class="bx bxs-user-detail"></i>
             </div>
             <h3>Kişiselleştirilmiş</h3>
             <p>Benzersiz ilgi alanlarınız ve becerilerinize göre özel kariyer tavsiyeleri</p>
           </div>
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"/><line x1="8" y1="21" x2="16" y2="21"/><line x1="12" y1="17" x2="12" y2="21"/></svg>
+              <i class="bx bxs-color"></i>
             </div>
             <h3>Modern Arayüz</h3>
-            <p>Cam efektli kartlar ve neon vurgularla şık bir kullanıcı deneyimi</p>
+            <p>Renkli ve eğlenceli bir arayüz</p>
           </div>
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="4 17 10 11 4 5"/><line x1="12" y1="19" x2="20" y2="19"/></svg>
+              <i class="bx bxs-rocket"></i>
             </div>
             <h3>Takip Adımları</h3>
             <p>Her kariyer yolu için somut ilerleme ve kendini geliştirme adımları</p>
           </div>
           <div class="feature-card">
             <div class="card-icon">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/><path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12z"/><circle cx="12" cy="12" r="2"/></svg>
+              <i class="bx bxs-gift"></i>
             </div>
             <h3>Tamamen Ücretsiz</h3>
             <p>API anahtarınızla herhangi bir ücret ödemeden sınırsız kullanım</p>
@@ -181,7 +182,7 @@
           
           <div class="about-image">
             <div class="image-frame">
-              <img src="./Assets/buyuyunceneolsamKID.png" alt="Büyüyünce Ne Olsam? Önizleme" />
+              <img src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?auto=format&fit=crop&w=600&q=60" alt="Eğlenceli çizim" />
             </div>
           </div>
         </div>
