--- a/kariyer_onerici/form.html
+++ b/kariyer_onerici/form.html
@@ -6,6 +6,10 @@
   <title>Büyüyünce Ne Olsam?</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="navbar.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Yeni Navbar -->
